--- a/index.html
+++ b/index.html
@@ -3,136 +3,257 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataAI Solutions - Inteligência Artificial & Análise de Dados</title>
+    <title>Profissional de Relações Internacionais</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">DataAI Solutions</div>
-            <ul class="nav-links">
-                <li><a href="#inicio">Início</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#cases">Cases</a></li>
-                <li><a href="#tecnologias">Tecnologias</a></li>
-                <li><a href="#contato">Contato</a></li>
+            <div class="mobile-menu">
+                <i class="fas fa-bars menu-icon"></i>
+                <i class="fas fa-times close-icon"></i>
+            </div>
+            <ul>
+                <li><a href="#home" class="active">Início</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#experience">Experiência</a></li>
+                <li><a href="#skills">Especialidades</a></li>
+                <li><a href="#languages">Idiomas</a></li>
+                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="inicio" class="hero">
-        <div class="hero-content">
-            <h1>Transformando Dados em Resultados</h1>
-            <p>Soluções inteligentes em IA e Análise de Dados para impulsionar seu negócio</p>
-            <button class="cta-button">Agende uma Consulta</button>
-        </div>
-    </section>
-
-    <section id="servicos" class="services">
-        <h2>Nossos Serviços</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <div class="service-icon">🤖</div>
-                <h3>Inteligência Artificial</h3>
-                <p>Desenvolvimento de soluções personalizadas com machine learning e deep learning</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">📊</div>
-                <h3>Análise de Dados</h3>
-                <p>Insights precisos através de análise avançada de dados e business intelligence</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">🎯</div>
-                <h3>Predição e Forecasting</h3>
-                <p>Modelos preditivos para antecipar tendências e comportamentos</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">📈</div>
-                <h3>Otimização de Processos</h3>
-                <p>Automação e melhoria de processos através de algoritmos inteligentes</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="cases" class="cases">
-        <h2>Cases de Sucesso</h2>
-        <div class="cases-slider">
-            <div class="case-card">
-                <h3>Varejo Inteligente</h3>
-                <p>Aumento de 45% nas vendas através de recomendações personalizadas</p>
-                <div class="metrics">
-                    <div class="metric">
-                        <span class="number">45%</span>
-                        <span class="label">Aumento em Vendas</span>
-                    </div>
-                    <div class="metric">
-                        <span class="number">3x</span>
-                        <span class="label">ROI</span>
+    <main>
+        <section id="home" class="hero">
+            <div class="profile-container">
+                <div class="profile-image">
+                    <!-- Substitua com sua foto profissional -->
+                    <img src="https://placehold.co/400x400" alt="Foto profissional">
+                </div>
+                <div class="hero-text">
+                    <h1>Seu Nome</h1>
+                    <p class="subtitle">Especialista em Relações Internacionais | Consultora de Assuntos Globais | Mediadora Cultural</p>
+                    <div class="hero-buttons">
+                        <a href="#contact" class="btn btn-primary">Entre em Contato</a>
+                        <a href="#experience" class="btn btn-secondary">Ver Experiência</a>
                     </div>
                 </div>
             </div>
-            <div class="case-card">
-                <h3>Indústria 4.0</h3>
-                <p>Redução de 30% em custos operacionais com manutenção preditiva</p>
-                <div class="metrics">
-                    <div class="metric">
-                        <span class="number">30%</span>
-                        <span class="label">Redução de Custos</span>
+        </section>
+
+        <section id="about" class="about">
+            <div class="about-content">
+                <h2>Sobre Mim</h2>
+                <p>Como especialista em Relações Internacionais, atuo como ponte entre culturas e organizações, facilitando diálogos diplomáticos e parcerias internacionais. Com expertise em assuntos globais e comunicação intercultural, promovo entendimento e cooperação além das fronteiras.</p>
+                <p>Minha abordagem combina sensibilidade diplomática com visão estratégica de negócios, permitindo uma navegação eficaz em cenários internacionais complexos, sempre mantendo a excelência profissional e o respeito cultural.</p>
+                <div class="achievements">
+                    <div class="achievement-card">
+                        <i class="fas fa-globe-americas"></i>
+                        <h4>Experiência Internacional</h4>
+                        <p>5+ países</p>
                     </div>
-                    <div class="metric">
-                        <span class="number">85%</span>
-                        <span class="label">Precisão</span>
+                    <div class="achievement-card">
+                        <i class="fas fa-handshake"></i>
+                        <h4>Parcerias Estabelecidas</h4>
+                        <p>20+ acordos</p>
+                    </div>
+                    <div class="achievement-card">
+                        <i class="fas fa-award"></i>
+                        <h4>Certificações</h4>
+                        <p>10+ reconhecimentos</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="tecnologias" class="technologies">
-        <h2>Tecnologias</h2>
-        <div class="tech-grid">
-            <div class="tech-item">Python</div>
-            <div class="tech-item">TensorFlow</div>
-            <div class="tech-item">PyTorch</div>
-            <div class="tech-item">Scikit-learn</div>
-            <div class="tech-item">Big Data</div>
-            <div class="tech-item">Cloud Computing</div>
-        </div>
-    </section>
+        <section id="experience" class="experience">
+            <h2>Experiência Profissional</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Consultora de Relações Internacionais</h3>
+                        <h4>Empresa Global | 2022 - Presente</h4>
+                        <ul>
+                            <li>Desenvolvimento de estratégias para expansão internacional</li>
+                            <li>Mediação de negociações internacionais</li>
+                            <li>Análise de mercados globais</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Analista de Comércio Exterior</h3>
+                        <h4>Multinacional | 2020 - 2022</h4>
+                        <ul>
+                            <li>Gestão de operações de importação e exportação</li>
+                            <li>Análise de acordos comerciais internacionais</li>
+                            <li>Desenvolvimento de relatórios de mercado</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Assistente de Relações Internacionais</h3>
+                        <h4>Câmara de Comércio | 2018 - 2020</h4>
+                        <ul>
+                            <li>Suporte em missões comerciais internacionais</li>
+                            <li>Organização de eventos diplomáticos</li>
+                            <li>Pesquisa de mercados internacionais</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section id="contato" class="contact">
-        <h2>Entre em Contato</h2>
-        <form id="contact-form">
-            <input type="text" placeholder="Nome" required>
-            <input type="email" placeholder="E-mail" required>
-            <input type="tel" placeholder="Telefone">
-            <textarea placeholder="Mensagem" required></textarea>
-            <button type="submit">Enviar Mensagem</button>
-        </form>
-    </section>
+        <section id="skills" class="skills">
+            <h2>Áreas de Especialização</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <h3>Diplomacia Global</h3>
+                    <p>Especializada em negociações internacionais, relações diplomáticas e mediação intercultural. Expertise em construir e manter parcerias estratégicas internacionais.</p>
+                    <div class="skill-tags">
+                        <span>Negociação</span>
+                        <span>Diplomacia</span>
+                        <span>Mediação</span>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <h3>Assuntos Culturais</h3>
+                    <p>Profundo conhecimento de culturas e costumes globais. Experiência em facilitar comunicação intercultural e promover entendimento internacional.</p>
+                    <div class="skill-tags">
+                        <span>Cultura</span>
+                        <span>Comunicação</span>
+                        <span>Diversidade</span>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <h3>Política Internacional</h3>
+                    <p>Conhecimento abrangente de políticas internacionais, acordos comerciais e estruturas de governança global. Especialista em análise e implementação de políticas.</p>
+                    <div class="skill-tags">
+                        <span>Política</span>
+                        <span>Governança</span>
+                        <span>Análise</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="languages" class="languages">
+            <h2>Idiomas</h2>
+            <div class="languages-grid">
+                <div class="language-card">
+                    <div class="language-icon">🇧🇷</div>
+                    <h3>Português</h3>
+                    <p>Nativo</p>
+                    <div class="proficiency-bar">
+                        <div class="proficiency" style="width: 100%"></div>
+                    </div>
+                </div>
+                <div class="language-card">
+                    <div class="language-icon">🇺🇸</div>
+                    <h3>Inglês</h3>
+                    <p>Fluente - C2</p>
+                    <div class="proficiency-bar">
+                        <div class="proficiency" style="width: 95%"></div>
+                    </div>
+                </div>
+                <div class="language-card">
+                    <div class="language-icon">🇪🇸</div>
+                    <h3>Espanhol</h3>
+                    <p>Avançado - C1</p>
+                    <div class="proficiency-bar">
+                        <div class="proficiency" style="width: 85%"></div>
+                    </div>
+                </div>
+                <div class="language-card">
+                    <div class="language-icon">🇫🇷</div>
+                    <h3>Francês</h3>
+                    <p>Intermediário - B2</p>
+                    <div class="proficiency-bar">
+                        <div class="proficiency" style="width: 70%"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="projects">
+            <h2>Projetos Internacionais</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="https://images.unsplash.com/photo-1557495235-340eb888a9fb?auto=format&fit=crop&w=800&q=80" alt="Projeto de Cooperação">
+                    </div>
+                    <div class="project-content">
+                        <h3>Cooperação Brasil-Europa</h3>
+                        <p>Desenvolvimento de programa de intercâmbio cultural e econômico entre instituições brasileiras e europeias.</p>
+                        <div class="project-tags">
+                            <span>Cooperação Internacional</span>
+                            <span>Cultura</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="https://images.unsplash.com/photo-1557495235-340eb888a9fb?auto=format&fit=crop&w=800&q=80" alt="Projeto de Negociação">
+                    </div>
+                    <div class="project-content">
+                        <h3>Negociações Multilaterais</h3>
+                        <p>Mediação de acordos comerciais entre países do Mercosul e parceiros asiáticos.</p>
+                        <div class="project-tags">
+                            <span>Negociação</span>
+                            <span>Comércio Internacional</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2>Entre em Contato</h2>
+            <div class="contact-content">
+                <div class="contact-text">
+                    <p>Estou sempre aberta a novas oportunidades de colaboração e parcerias internacionais. Entre em contato para discutirmos como posso contribuir com seu projeto ou organização.</p>
+                </div>
+                <div class="contact-grid">
+                    <a href="mailto:seu.email@exemplo.com" class="contact-card">
+                        <i class="fas fa-envelope"></i>
+                        <h3>E-mail</h3>
+                        <p>seu.email@exemplo.com</p>
+                    </a>
+                    <a href="https://wa.me/5500000000000" target="_blank" class="contact-card">
+                        <i class="fab fa-whatsapp"></i>
+                        <h3>WhatsApp</h3>
+                        <p>+55 (00) 00000-0000</p>
+                    </a>
+                    <a href="https://linkedin.com/in/seuperfil" target="_blank" class="contact-card">
+                        <i class="fab fa-linkedin"></i>
+                        <h3>LinkedIn</h3>
+                        <p>linkedin.com/in/seuperfil</p>
+                    </a>
+                    <a href="https://instagram.com/seuperfil" target="_blank" class="contact-card">
+                        <i class="fab fa-instagram"></i>
+                        <h3>Instagram</h3>
+                        <p>@seuperfil</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <div class="footer-content">
-            <div class="footer-section">
-                <h3>DataAI Solutions</h3>
-                <p>Transformando o futuro através da tecnologia</p>
+            <div class="footer-info">
+                <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
             </div>
-            <div class="footer-section">
-                <h3>Contato</h3>
-                <p>contato@dataai.com.br</p>
-                <p>+55 (11) 99999-9999</p>
+            <div class="footer-social">
+                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <div class="footer-section">
-                <h3>Redes Sociais</h3>
-                <div class="social-links">
-                    <a href="#">LinkedIn</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">Instagram</a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 DataAI Solutions. Todos os direitos reservados.</p>
         </div>
     </footer>
 
